<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="100" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="@string/mtid"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/merchant_transaction_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="100" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/buyer_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:ems="10" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="100" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="@string/amount"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:ems="10"
                android:hint="Amount in paise" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="100" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="70"
                android:text="@string/pay_method"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <Spinner
                android:id="@+id/payment_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/payment_method"
                android:prompt="@string/payment_method" />
        </LinearLayout>

        <Button
            android:id="@+id/bPay"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="Pay By PayZippy" />
    </LinearLayout>

</ScrollView>